--- a/templates/store_money.html
+++ b/templates/store_money.html
@@ -93,35 +93,35 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
     <script>
-        const contractAddress = '0x9d63fd56fab58f414fd3a4b27ae0e099091ba89d'; // Replace with your contract address
+        const contractAddress = '0x7FcE11677FCfB22a9e513E39a7D6C983DE12EF9e'; // Replace with your contract address
         const contractABI = [
-            {
-                "inputs": [
-                    {
-                        "internalType": "uint256",
-                        "name": "num",
-                        "type": "uint256"
-                    }
-                ],
-                "name": "store_m",
-                "outputs": [],
-                "stateMutability": "nonpayable",
-                "type": "function"
-            },
-            {
-                "inputs": [],
-                "name": "view_m",
-                "outputs": [
-                    {
-                        "internalType": "uint256",
-                        "name": "",
-                        "type": "uint256"
-                    }
-                ],
-                "stateMutability": "view",
-                "type": "function"
-            }
-        ];
+	{
+		"inputs": [],
+		"name": "getStoredValue",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "uint256",
+				"name": "_value",
+				"type": "uint256"
+			}
+		],
+		"name": "storeValue",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	}
+]
 
         const web3 = new Web3(Web3.givenProvider);
         const contract = new web3.eth.Contract(contractABI, contractAddress);
@@ -131,11 +131,11 @@
             const value = document.getElementById('moneyInput').value;
             console.log("value: " + value);
             console.log("accounts[0] " + accounts[0]);
-            await contract.methods.store_m(value).send({from: accounts[0]});
+            await contract.methods.storeValue(value).send({from: accounts[0]});
         }
 
         async function getValue() {
-            const storedValue = await contract.methods.view_m().call();
+            const storedValue = await contract.methods.getStoredValue().call();
             console.log("stored value " + storedValue);
             document.getElementById('storedValue').innerText = "Stored Value: " + storedValue;
         }
