--- a/templates/admin.html
+++ b/templates/admin.html
@@ -99,11 +99,18 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to DAPP Store and Transfer Money. May I know your name? </h2>
+        <h2>Admin</h2>
+        <br>
+        <form action = "/viewDB" method="post">
+            <input type="submit" value="View Database">
+        </form>
+        <br>
+        <form action = "/delDB" method="post">
+            <input type="submit" value="Delete Database">
+        </form>
         <br>
         <form action = "/main" method="post">
-            <input type="text" name="q">
-            <input type="submit" value="Enter">
+            <input type="submit" value="Main">
         </form>
         <br>
     </div>
