--- a/templates/main.html
+++ b/templates/main.html
@@ -99,13 +99,23 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to DAPP Store and Transfer Money. May I know your name? </h2>
+        <h2>Hi, {{r}}, how can I help you today?</h2>
         <br>
-        <form action = "/main" method="post">
-            <input type="text" name="q">
-            <input type="submit" value="Enter">
+        <form action = "/store_money" method="post">
+            <input type="submit" value="Store Money">
         </form>
         <br>
+        <form action = "/transfer_money" method="post">
+            <input type="submit" value="Transfer Money">
+        </form>
+        <br>
+        <form action = "/admin" method="post">
+            <input type="submit" value="admin">
+        </form>
+        <br>
+        <form action = "/" method="post">
+            <input type="submit" value="Logout">
+        </form>
     </div>
 </body>
 </html>
