--- a/templates/viewDB.html
+++ b/templates/viewDB.html
@@ -99,11 +99,11 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to DAPP Store and Transfer Money. May I know your name? </h2>
+        <h2>User Data </h2>
+        {{r}}
         <br>
         <form action = "/main" method="post">
-            <input type="text" name="q">
-            <input type="submit" value="Enter">
+            <input type="submit" value="Main">
         </form>
         <br>
     </div>
